--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-kss": "0.0.2",
     "gulp-nunjucks-render": "^1.0.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-prettify": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
